style(details): fix p line-clamp overflow

--- a/app/film-database/components/movie/_fdDetails.scss
+++ b/app/film-database/components/movie/_fdDetails.scss
@@ -62,7 +62,7 @@
     }
     & p {
       display: -webkit-box;
-      padding-bottom: var(--fd-gap);
+      // padding-bottom: var(--fd-gap);
       line-clamp: 4;
       -webkit-line-clamp: 4;
       -webkit-box-orient: vertical;
